--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,23 @@ body {
   &:hover {
     transform: scale(1.03);
   }
+
+  &-info {
+    margin: 15px 0;
+  }
+
+  &-genre {
+    padding: 10px;
+  }
+
+  &-rating {
+    background-color: #141414;
+    border-radius: 50px;
+    margin: 0 auto;
+    font-size: 0.9rem;
+    padding: 3px 10px;
+    width: 50px;
+  }
   }
 
   &__image {
@@ -68,9 +85,5 @@ body {
     display: block;
     object-fit: cover;
     object-position: center;
-  }
-
-  &__title {
-    padding: 20px;
   }
 }
