--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ body {
 
   &__text {
     font-weight: 300;
+    margin: 2rem 0;
   }
 }
 
@@ -85,6 +86,11 @@ body {
         color: red;
       }
     }
+
+    @media (max-width: 481px) {
+      flex: 0 0 calc(33.33% - 0.75rem);
+      max-width: calc(33.33% - 0.75rem);
+    }
   }
 
   &__image {
@@ -94,4 +100,13 @@ body {
     object-fit: cover;
     object-position: center;
   }
+}
+
+.input {
+  display: block;
+  width: 100%;
+  margin: 2rem 0;
+  padding: 0.6rem;
+  border: 3px solid lightgrey;
+  border-radius: 30px;
 }
