--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,3 +110,22 @@ body {
   border: 3px solid lightgrey;
   border-radius: 30px;
 }
+
+.filter {
+  display: flex;
+  justify-content: right;
+  align-items: baseline;
+  margin-bottom: 2rem;
+
+  &__slot {
+    background-color: #2c2c2c;
+    padding: 25px;
+    margin: 10px;
+    border-radius: 50px;
+    gap: 30px;
+  }
+
+  &__label {
+    margin-right: 15px;
+  }
+}
